concord_macros/tests/trybuild/fail/auth/endpoint_basic_used_as_bearer.stderr
error: BearerAuth requires an access-token credential; `session` does not fit
  --> tests/trybuild/fail/auth/endpoint_basic_used_as_bearer.rs:27:21
   |
27 |         auth bearer session
   |                     ^^^^^^^
